--- a/about.html
+++ b/about.html
@@ -32,20 +32,19 @@
 
 <body>
     <!-- Topbar Start -->
-    
     <div class="container-fluid py-2 border-bottom d-none d-lg-block">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 text-center text-lg-start mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-decoration-none text-body pe-3"><i class="bi bi-telephone me-2"></i>+53 5 0994101</a>
+                        <a class="text-decoration-none text-body pe-3 text-grow" href="tel:+5350994101"><i class="bi bi-telephone me-2"></i>+53 5 0994101</a>
                         <span class="text-body">|</span>
-                        <a class="text-decoration-none text-body px-3"><i class="bi bi-envelope me-2"></i>hospitalfaustino.mtz@infomed.sld.cu</a>
+                        <a class="text-decoration-none text-body px-3 text-grow" href="mailto:hospitalfaustino.mtz@infomed.sld.cu"><i class="bi bi-envelope me-2"></i>hospitalfaustino.mtz@infomed.sld.cu</a>
                     </div>
                 </div>
                 <div class="col-md-4 text-center text-lg-end">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-body px-2" target="_blank" href="https://www.facebook.com/people/Hospital-Provincial-Cl%C3%ADnico-Quir%C3%BArgico-Docente-Faustino-P%C3%A9rez/100091764969888/">
+                        <a class="text-body text-grow px-2" target="_blank" href="https://www.facebook.com/people/Hospital-Provincial-Cl%C3%ADnico-Quir%C3%BArgico-Docente-Faustino-P%C3%A9rez/100091764969888/">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                         <a class="text-body px-2" target="_blank" href="" style="display: none;">
@@ -73,7 +72,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-uppercase arial-1 d-flex align-items-center flex-row" style="font-size: 0.9cm !important;"><img src="icon/Logo.png" class="me-2" style="height: 60px"><div class="d-none d-xl-flex align-items-center">HOSPITAL FAUSTINO PÉREZ</div></h1>
+                    <h1 class="m-0 text-uppercase arial-1 d-flex align-items-center flex-row" style="font-size: 0.9cm !important;"><img src="icon/Logo.png" class="me-2" style="width: 23mm"></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -150,7 +149,7 @@
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-ambulance text-primary mb-3"></i>
-                                <h6 class="mb-0">Gratis<small class="d-block text-primary">Ambulancias</small></h6>
+                                <h6 class="mb-0">Servicio<small class="d-block text-primary">Ambulancias</small></h6>
                             </div>
                         </div>
                     </div>
@@ -366,29 +365,29 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Contactanos</h4>
+                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Contáctanos</h4>
                     <p class="mb-4">Conéctate con nosotros para cualquier consulta</p>
-                  <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Carretera Central Km 101, Matanzas, Cuba</p>
-                  <p class="mb-2"><i class="fa fa-envelope text-primary me-1"></i>hospitalfaustino.mtz@infomed.sld.cu</p>
-                    <p class="mb-0"><i class="fa fa-phone-alt text-primary me-1"></i>+53 5 0994101</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Carretera Central Km 101, Matanzas, Cuba</p>
+                    <a class="mb-2 text-light text-grow" href="mailto:hospitalfaustino.mtz@infomed.sld.cu"><i class="fa fa-envelope text-primary me-1"></i>hospitalfaustino.mtz@infomed.sld.cu</a>
+                    <a class="mb-0 text-light text-grow" href="tel:+5350994101"><i class="fa fa-phone-alt text-primary me-1"></i>+53 5 0994101</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Enlaces Rápidos</h4>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light grow-text mb-2" href="index.html"><i class="fa fa-angle-right me-2"></i>Inicio</a>
-                        <a class="text-light grow-text mb-2" href="about.html"><i class="fa fa-angle-right me-2"></i>Nosotros</a>
-                        <a class="text-light grow-text mb-2" href="service.html"><i class="fa fa-angle-right me-2"></i>Servicios</a>
-                        <a class="text-light grow-text mb-2" href="structure.html"><i class="fa fa-angle-right me-2"></i>Nuestro Equipo</a>
-                        <a class="text-light grow-text" href="contact.html"><i class="fa fa-angle-right me-2"></i>Contactos</a>
+                        <a class="text-light text-grow mb-2" href="index.html"><i class="fa fa-angle-right me-2"></i>Inicio</a>
+                        <a class="text-light text-grow mb-2" href="about.html"><i class="fa fa-angle-right me-2"></i>Nosotros</a>
+                        <a class="text-light text-grow mb-2" href="service.html"><i class="fa fa-angle-right me-2"></i>Servicios</a>
+                        <a class="text-light text-grow mb-2" href="structure.html"><i class="fa fa-angle-right me-2"></i>Nuestro Equipo</a>
+                        <a class="text-light text-grow" href="contact.html"><i class="fa fa-angle-right me-2"></i>Contactos</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Sitios relacionados&nbsp;</h4>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light grow-text mb-2" href="https://www.sld.cu/"><i class="fa fa-angle-right me-2"></i>Infomed</a>
-                        <a class="text-light grow-text mb-2" href="https://bmns.sld.cu/"><i class="fa fa-angle-right me-2"></i>Biblioteca Medica Nacional</a>
-                        <a class="text-light grow-text mb-2" href="http://www.smcsalud.cu/"><i class="fa fa-angle-right me-2"></i>Servicios Medicos Cubanos</a>
-                        <a class="text-light grow-text mb-2" href="http://mesaredonda.cubadebate.cu/"><i class="fa fa-angle-right me-2"></i>Mesa Redonda </a>
+                        <a class="text-light text-grow mb-2" href="https://www.sld.cu/"><i class="fa fa-angle-right me-2"></i>Infomed</a>
+                        <a class="text-light text-grow mb-2" href="https://bmns.sld.cu/"><i class="fa fa-angle-right me-2"></i>Biblioteca Médica Nacional</a>
+                        <a class="text-light text-grow mb-2" href="http://www.smcsalud.cu/"><i class="fa fa-angle-right me-2"></i>Servicios Médicos Cubanos</a>
+                        <a class="text-light text-grow mb-2" href="http://mesaredonda.cubadebate.cu/"><i class="fa fa-angle-right me-2"></i>Mesa Redonda </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
