--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
     <div class="container-fluid bg-dark text-light mt-5 py-5">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-3 col-md-6 d-flex flex-column">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Contáctanos</h4>
                     <p class="mb-4">Conéctate con nosotros para cualquier consulta</p>
                     <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Carretera Central Km 101, Matanzas, Cuba</p>
