--- a/structure.html
+++ b/structure.html
@@ -156,7 +156,7 @@
                 <li>
                   <span class="lvl-b">
                        <strong>Directora</strong>
-                       <img src="icon/Logo.png" class="icon" alt="">
+                       <img src="icon/Logo.png" class="icon" width="100px" height="100px" alt="">
                     </span>
                 </li>
               </ul>
