--- a/structure.html
+++ b/structure.html
@@ -156,7 +156,7 @@
                 <li>
                   <span class="lvl-b">
                        <strong>Directora</strong>
-                       <img src="icon/Logo.png" class="icon" width="100px" height="100px" alt="">
+                       <img src="icon/Logo.png" class="icon-lvl-b" width="100px" height="100px" alt="">
                     </span>
                 </li>
               </ul>
@@ -215,7 +215,7 @@
               <li class="department ">
                 <span class="lvl-b">
                     <p><strong>Subdirectora</strong></p>
-                    <img src="icon/Logo.png" class="icon" alt="">
+                    <img src="icon/Logo.png" class="icon-lvl-b" width="100px" height="100px" alt="">
                     </span>
                 <ul class="sections">
                   <li class="section"> <span>
@@ -235,14 +235,14 @@
               <li class="department ">
                 <span class="lvl-b large">
                     <p ><strong>Centro de urgencia y atención al grave</strong></p>
-                    <img src="icon/Logo.png" class="icon" alt="">
+                    <img src="icon/Logo.png" class="icon-lvl-b" width="100px" height="100px" alt="">
                 </span>
               </li>
               
               <li class="department "  >
                 <span class="lvl-b">
                     <p><strong>Subdirectora</strong></p>
-                    <img src="icon/Logo.png" class="icon" alt="">
+                    <img src="icon/Logo.png" class="icon-lvl-b" width="100px" height="100px" alt="">
                     </span>
                 <ul class="sections">
                   <li class="section"> <span>
@@ -279,7 +279,7 @@
               <li class="department " >
                 <span class="lvl-b">
                     <p><strong>Departamento Económico</strong></p>
-                    <img src="icon/Logo.png" class="icon" alt="">
+                    <img src="icon/Logo.png" class="icon-lvl-b" width="100px" height="100px" alt="">
                     </span>
                 <ul class="sections">
                   <li class="section"> <span>
@@ -300,7 +300,7 @@
               <li class="department " >
                 <span class="lvl-b">
                     <p><strong>Subdirector</strong></p>
-                    <img src="icon/Logo.png" class="icon" alt="">
+                    <img src="icon/Logo.png" class="icon-lvl-b" width="100px" height="100px" alt="">
                 </span>
                 <ul class="sections">
                   <li class="section"> <span>
