--- a/structure.html
+++ b/structure.html
@@ -341,7 +341,7 @@
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-5 p-4">
                                 <h3>Taymí Martínez Naranjo</h3>
-                                <h6 class="fw-normal fst-italic text-primary mb-4">Jefe de Departamento Docente HFP. Especialista de primer grado en Medicina General Integral  y Especialista de primer grado en Cirugía General. Profesora e Investigadora Auxiliar.</h6>
+                                <h6 class="fw-normal fst-italic text-primary mb-4">Directora del hospital. Especialista de primer grado en Medicina. General Integral y Especialista de primer grado en Cirugía General.</h6>
                             </div>
                             <div class="d-flex mt-auto border-top p-4"  style="display: none !important;">
                                 <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3 d-flex justify-content-center align-items-center" href="#">
@@ -365,7 +365,7 @@
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-5 p-4">
                                 <h3>Gretter Robaina Rodríguez</h3>
-                                <h6 class="fw-normal fst-italic text-primary mb-4">Especialista de primer grado en Cirugía General</h6>
+                                <h6 class="fw-normal fst-italic text-primary mb-4">Subdirectora del hospital. Especialista de primer grado en Cirugía General</h6>
                             </div>
                             <div class="d-flex mt-auto border-top p-4"  style="display: none !important;">
                                 <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3 d-flex justify-content-center align-items-center" href="#">
@@ -652,7 +652,7 @@
 					 <a class="text-primary" href="https://www.sld.cu/">Infomed</a>. Hospital Faustino Pérez.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <p class="mb-0">Diseñado por <a class="text-primary" href="https://htmlcodex.com">Creando</a></p>
+                    <p class="mb-0">Diseñado por <a class="text-primary" href="">Creando</a></p>
                 </div>
             </div>
         </div>
